--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -1,6 +1,9 @@
 { 
-  "signin": "Entrar",
+  "sign-in": "Entrar",
   "logout": "Sair",
+
+  "add": "Adicionar",
+
   "documents": "Documentos",
   "models": "Modelos",
   "activities": "Actividades",
