Improve english translation for ModelViewer

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -55,7 +55,7 @@
 
   "model": {
     "edit": {
-      "header": "Edit"
+      "header": "Edit model"
     },
     "field": {
       "required": "Required"
