Adds team information in the sidebar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -94,5 +94,11 @@
   },
 
   "activities": "Activities",
-  "teams": "Teams"
+
+  "teams" : {
+    "roles" :{
+      "administrator": "Administrator",
+      "member": "Member" 
+    }
+  }
 }
